--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="banner-gif">
         <img id="banner" src="./public/images/mid.gif" alt="banner" />
       </div>
+      <h1 id="disiz">Disiz dit les choses sans fard, alors moi aussi je vais être simple et direct :</h1>
       <h1 id="question-heading">Will you be my valentine?</h1>
       <div class="buttons">
         <button id="yes-button"><p>Yes</p></button>
