--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         alors moi aussi je vais être simple et direct :</h1>
       <h1 id="question-heading">Will you be my valentine?</h1>
       <div class="buttons">
-        <button id="yes-button"><p>Yes</p></button>
-        <button id="no-button"><p>No</p></button>
+        <button id="yes-button"><p>Oui !</p></button>
+        <button id="no-button"><p>Non merci :(</p></button>
       </div>
       <div class="message">
         <h2 id="success-message">Yepppie, à bientôt :3</h2>
