--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h2 id="success-message">Yepppie, à bientôt :3</h2>   
       </div>
     </div>
-     <footer>
-          <h6>Credit to <a class="creator" href="https://github.com/Aayush-683">Aayush683</a></h6>
-    </footer>
     <script src="./public/js/script.js"></script>
+    <footer>
+      <p>Credit to <a class="creator" href="https://github.com/Aayush-683">Aayush683</a></p>
+    </footer>
   </body>
 </html>
