--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       </div>
     </div>
     <script src="./public/js/script.js"></script>
-    <footer>
+    <!-- <footer>
       <p>Credit to <a class="creator" href="https://github.com/Aayush-683">Aayush683</a></p>
     </footer>
+    -->
   </body>
 </html>
